--- a/src/xx2pm.template
+++ b/src/xx2pm.template
@@ -4,10 +4,11 @@
 # sql only for now
 sources=C:\Users\PBDIA00022\PycharmProjects\PD2SQL\src\mango\20160308-115724\
 
+# .parameter is default parameter across items, if no specific parameter is found
 .udc=PBDIA00022@PDSYS
 .keys=AKTORID
 
-tasklist=der1,agg1,der2,join
+tasklist=der1,agg1,der2,join,metaMe
 
 Giver.der1=create n :=1;
 Activities.der1=create AKTORID := tointeger(CA_CUSTOMER_ID);
@@ -17,4 +18,9 @@ Activities.agg1=C:\Users\PBDIA00022\PycharmProjects\XX2PM\code\baa.tml
 Giver.der2=C:\Users\PBDIA00022\PycharmProjects\XX2PM\code\foo.fdl
 Activities.der2=create donk := 99;
 
-Giver.join=Activities_der1_agg1_der2.donk
+Giver.join=Activities_der1_agg1_der2.donk,countActivities
+
+Giver.metaMe=C:\Users\PBDIA00022\PycharmProjects\XX2PM\code\metadata.qsfm
+
+## TODO Multiple metadatfiles
+## TODO Publish with datestamp: qscopy, passthrough $today, $now
