--- a/src/xx2pm.properties
+++ b/src/xx2pm.properties
@@ -1,29 +1,30 @@
 [xx2pm]
 
-# sources: comma-separated list of files, or search pattern (suffix optional)
-# meta: comma-separated list of files, or search pattern, local or pathed
+## DOCUMENT
+## sources= ....  file or dir, expands dir for *.sql
+## taskslist: der, agg, join, meta, copy
+## meta task: file or dir, expands dir for *.qsfm
+
+## $today YYYYMMDD, $now YYYYMMDD-HHMMSS
+
+
 # sql & ftr only (for now)
-sources=C:/Users/ro020si/Documents/Python/XX2PM/testdata/B*
+sources=C:\Users\portraituser\PycharmProjects\PD2SQL\results\*e
 
 # .parameter is default parameter across items, if no specific parameter is found
-.udc=PBDIA00022@PDSYS
-.keys=CustomerNumber
+.udc=MHProd@MHSystem
+.keys=cus_customerid
 
-tasklist=der,metax,metaN,agg,join,
+tasklist=der,agg,join
+#der,metax,metaN,agg,join,
 ##meta2
 ##,agg1,der2,join
 
+der.Kunde=  create y :=99;
 
-der.B=  create y :=99;
-        create z :=88;
-der1.B= create y :=99; create z :=88;
+agg.MineFavoritthester=
+    create count_thester := count();
 
-metax.B=current
-
-metaN.B2=B_current,C:/Users/ro020si/Documents/Python/XX2PM/testdata/M*
-
-
-agg1.B2= create countB2 := count();
-join.DirectBankUSA=B_der1.y,z;B2_agg1
+join.Kunde=Adresse.cus_mailaddress,po_name
 
 
