fix for globing previous output

--- a/src/xx2pm.properties
+++ b/src/xx2pm.properties
@@ -3,28 +3,35 @@
 ## DOCUMENT
 ## sources= ....  file or dir, expands dir for *.sql
 ## taskslist: der, agg, join, meta, copy
-## meta task: file or dir, expands dir for *.qsfm
+## meta(N) task: file or dir, expands dir for *.qsfm
 
 ## $today YYYYMMDD, $now YYYYMMDD-HHMMSS
 
 
 # sql & ftr only (for now)
-sources=C:\Users\portraituser\PycharmProjects\PD2SQL\results\*e
+sources=C:\Users\portraituser\PycharmProjects\PD2SQL\results\K*e
 
 # .parameter is default parameter across items, if no specific parameter is found
 .udc=MHProd@MHSystem
 .keys=cus_customerid
 
-tasklist=der,agg,join
+tasklist=metaN,score
+
+#der,join,join2
 #der,metax,metaN,agg,join,
 ##meta2
 ##,agg1,der2,join
 
-der.Kunde=  create y :=99;
+metaN.Kunde=..\code\*.qsfm
+
+der.Kunde=create y :=99;
+score=$rundir\*metaN*.ftr
 
 agg.MineFavoritthester=
     create count_thester := count();
 
-join.Kunde=Adresse.cus_mailaddress,po_name
+join.Kunde.ftr=Adresse.cus_mailaddress,po_name
+
+join2.Kunde=Kunde_der.y
 
 
