--- a/src/xx2pm.properties
+++ b/src/xx2pm.properties
@@ -7,15 +7,14 @@
 
 ## $today YYYYMMDD, $now YYYYMMDD-HHMMSS
 
-
 # sql & ftr only (for now)
-sources=C:\Users\portraituser\PycharmProjects\PD2SQL\results\K*e
+sources=C:\Users\ro020si\Documents\HP\Aug2016\SQLOutput-20160822\loans
 
 # .parameter is default parameter across items, if no specific parameter is found
 .udc=MHProd@MHSystem
-.keys=cus_customerid
+.keys=RS_LOAN_AGREEMENT_NUMBER
 
-tasklist=metaN,score
+tasklist=der,agg
 
 #der,join,join2
 #der,metax,metaN,agg,join,
@@ -23,12 +22,38 @@ tasklist=metaN,score
 ##,agg1,der2,join
 
 metaN.Kunde=..\code\*.qsfm
-
+x:=countdays(#01/01/1900,RS_LOAN_ACTIVATION_DATE); y:=countdays(#01/01/1900,#01/01/2015); x<y
 der.Kunde=create y :=99;
-score=$rundir\*metaN*.ftr
+#score=$$rundir\*metaN*.ftr
 
-agg.MineFavoritthester=
-    create count_thester := count();
+der.loans=
+    create enddate := nvl(RS_LOAN_CLOSED_DATE,CC_CONTACT_DATE);
+    create start_index :=countdays(#01/01/1900,RS_LOAN_ACTIVATION_DATE);
+    create end_index :=countdays(#01/01/1900,enddate);
+
+agg.loans=
+    create count := count();
+    create loan20150101 :=  count() where (start_index <= countdays(#01/01/1900,#20150101) and end_index >= countdays(#01/01/1900,#20150101)) ;
+    create loan20150201 :=  count() where (start_index <= countdays(#01/01/1900,#20150201) and end_index >= countdays(#01/01/1900,#20150201)) ;
+    create loan20150301 :=  count() where (start_index <= countdays(#01/01/1900,#20150301) and end_index >= countdays(#01/01/1900,#20150301)) ;
+    create loan20150401 :=  count() where (start_index <= countdays(#01/01/1900,#20150401) and end_index >= countdays(#01/01/1900,#20150401)) ;
+    create loan20150501 :=  count() where (start_index <= countdays(#01/01/1900,#20150501) and end_index >= countdays(#01/01/1900,#20150501)) ;
+    create loan20150601 :=  count() where (start_index <= countdays(#01/01/1900,#20150601) and end_index >= countdays(#01/01/1900,#20150601)) ;
+    create loan20150701 :=  count() where (start_index <= countdays(#01/01/1900,#20150701) and end_index >= countdays(#01/01/1900,#20150701)) ;
+    create loan20150801 :=  count() where (start_index <= countdays(#01/01/1900,#20150801) and end_index >= countdays(#01/01/1900,#20150801)) ;
+    create loan20150901 :=  count() where (start_index <= countdays(#01/01/1900,#20150901) and end_index >= countdays(#01/01/1900,#20150901)) ;
+    create loan20151001 :=  count() where (start_index <= countdays(#01/01/1900,#20151001) and end_index >= countdays(#01/01/1900,#20151001)) ;
+    create loan20151101 :=  count() where (start_index <= countdays(#01/01/1900,#20151101) and end_index >= countdays(#01/01/1900,#20151101)) ;
+    create loan20151201 :=  count() where (start_index <= countdays(#01/01/1900,#20151201) and end_index >= countdays(#01/01/1900,#20151201)) ;
+    create loan20160101 :=  count() where (start_index <= countdays(#01/01/1900,#20160101) and end_index >= countdays(#01/01/1900,#20160101)) ;
+    create loan20160201 :=  count() where (start_index <= countdays(#01/01/1900,#20160201) and end_index >= countdays(#01/01/1900,#20160201)) ;
+    create loan20160301 :=  count() where (start_index <= countdays(#01/01/1900,#20160301) and end_index >= countdays(#01/01/1900,#20160301)) ;
+    create loan20160401 :=  count() where (start_index <= countdays(#01/01/1900,#20160401) and end_index >= countdays(#01/01/1900,#20160401)) ;
+    create loan20160501 :=  count() where (start_index <= countdays(#01/01/1900,#20160501) and end_index >= countdays(#01/01/1900,#20160501)) ;
+    create loan20160601 :=  count() where (start_index <= countdays(#01/01/1900,#20160601) and end_index >= countdays(#01/01/1900,#20160601)) ;
+    create loan20160701 :=  count() where (start_index <= countdays(#01/01/1900,#20160701) and end_index >= countdays(#01/01/1900,#20160701)) ;
+
+## do one record per loan first (last dates?) and then derive period flags
 
 join.Kunde.ftr=Adresse.cus_mailaddress,po_name
 
