--- a/src/xx2pm.properties
+++ b/src/xx2pm.properties
@@ -1,62 +1,57 @@
 [xx2pm]
 
 ## DOCUMENT
-## sources= ....  file or dir, expands dir for *.sql
-## taskslist: der, agg, join, meta, copy
-## meta(N) task: file or dir, expands dir for *.qsfm
+## forward slashes only please!
+############## sources= ....  file or dir, expands dir for *.sql
+## taskslist: der, agg           #########, join, meta, copy
+######################## meta(N) task: file or dir, expands dir for *.qsfm
 
 ## $today YYYYMMDD, $now YYYYMMDD-HHMMSS
 
-# sql & ftr only (for now)
-sources=C:\Users\ro020si\Documents\HP\Aug2016\SQLOutput-20160822\loans
+#tasklist=der1,agg1
 
-# .parameter is default parameter across items, if no specific parameter is found
-.udc=MHProd@MHSystem
-.keys=RS_LOAN_AGREEMENT_NUMBER
+## op is either provided or inferred
+der1.op=der
+## path is either provided or assumed to be rundir
+der1.in=C:/Users/ro020si/Documents/Python/XX2PM/testdata/B.ftr
+## regex flagged from non-alphanumeric characters
+## regex for expansion is complete - must match full string
+der1.var=gg:0,1;ff:.*AmtQtr[12].*
+## trim is either 'pattern' or 'pattern,replace'
+der1.trim=Payment
+## how use replace?
+## $$var refers to var
+der1.fdl=  create nvl_$$ff_$$gg := nvl(Payment$$ff,$$gg);
 
-tasklist=der,agg
+#############################################
 
-#der,join,join2
-#der,metax,metaN,agg,join,
-##meta2
-##,agg1,der2,join
+##rundir=20170310-141418
 
-metaN.Kunde=..\code\*.qsfm
-x:=countdays(#01/01/1900,RS_LOAN_ACTIVATION_DATE); y:=countdays(#01/01/1900,#01/01/2015); x<y
-der.Kunde=create y :=99;
-#score=$$rundir\*metaN*.ftr
+datamart=C:\QuadstoneData\dp2\data
 
-der.loans=
-    create enddate := nvl(RS_LOAN_CLOSED_DATE,CC_CONTACT_DATE);
-    create start_index :=countdays(#01/01/1900,RS_LOAN_ACTIVATION_DATE);
-    create end_index :=countdays(#01/01/1900,enddate);
+tasklist=agg,der,members2
 
-agg.loans=
-    create count := count();
-    create loan20150101 :=  count() where (start_index <= countdays(#01/01/1900,#20150101) and end_index >= countdays(#01/01/1900,#20150101)) ;
-    create loan20150201 :=  count() where (start_index <= countdays(#01/01/1900,#20150201) and end_index >= countdays(#01/01/1900,#20150201)) ;
-    create loan20150301 :=  count() where (start_index <= countdays(#01/01/1900,#20150301) and end_index >= countdays(#01/01/1900,#20150301)) ;
-    create loan20150401 :=  count() where (start_index <= countdays(#01/01/1900,#20150401) and end_index >= countdays(#01/01/1900,#20150401)) ;
-    create loan20150501 :=  count() where (start_index <= countdays(#01/01/1900,#20150501) and end_index >= countdays(#01/01/1900,#20150501)) ;
-    create loan20150601 :=  count() where (start_index <= countdays(#01/01/1900,#20150601) and end_index >= countdays(#01/01/1900,#20150601)) ;
-    create loan20150701 :=  count() where (start_index <= countdays(#01/01/1900,#20150701) and end_index >= countdays(#01/01/1900,#20150701)) ;
-    create loan20150801 :=  count() where (start_index <= countdays(#01/01/1900,#20150801) and end_index >= countdays(#01/01/1900,#20150801)) ;
-    create loan20150901 :=  count() where (start_index <= countdays(#01/01/1900,#20150901) and end_index >= countdays(#01/01/1900,#20150901)) ;
-    create loan20151001 :=  count() where (start_index <= countdays(#01/01/1900,#20151001) and end_index >= countdays(#01/01/1900,#20151001)) ;
-    create loan20151101 :=  count() where (start_index <= countdays(#01/01/1900,#20151101) and end_index >= countdays(#01/01/1900,#20151101)) ;
-    create loan20151201 :=  count() where (start_index <= countdays(#01/01/1900,#20151201) and end_index >= countdays(#01/01/1900,#20151201)) ;
-    create loan20160101 :=  count() where (start_index <= countdays(#01/01/1900,#20160101) and end_index >= countdays(#01/01/1900,#20160101)) ;
-    create loan20160201 :=  count() where (start_index <= countdays(#01/01/1900,#20160201) and end_index >= countdays(#01/01/1900,#20160201)) ;
-    create loan20160301 :=  count() where (start_index <= countdays(#01/01/1900,#20160301) and end_index >= countdays(#01/01/1900,#20160301)) ;
-    create loan20160401 :=  count() where (start_index <= countdays(#01/01/1900,#20160401) and end_index >= countdays(#01/01/1900,#20160401)) ;
-    create loan20160501 :=  count() where (start_index <= countdays(#01/01/1900,#20160501) and end_index >= countdays(#01/01/1900,#20160501)) ;
-    create loan20160601 :=  count() where (start_index <= countdays(#01/01/1900,#20160601) and end_index >= countdays(#01/01/1900,#20160601)) ;
-    create loan20160701 :=  count() where (start_index <= countdays(#01/01/1900,#20160701) and end_index >= countdays(#01/01/1900,#20160701)) ;
+agg.in=${datamart}/Trans
+agg.keys=CustomerID|CustomerID,PurchaseDate
+agg.var=nn:Amount,PointsRedeemed;pp:P.*
+agg.trim=_P,_xP
+agg.tml=
+    create num_tx:=count();
+    create sum_$$nn:=sum($$nn);
+    create mean_$$nn:=mean($$nn);
+    create last_$$pp:=last($$pp);
 
-## do one record per loan first (last dates?) and then derive period flags
+der.in=${datamart}/Cust
+der.fdl=create CustomerID :=right(CustomerNumber,strlen(CustomerNumber)-1);
+## TODO auto rename RH key
 
-join.Kunde.ftr=Adresse.cus_mailaddress,po_name
-
-join2.Kunde=Kunde_der.y
+members2.in=der
+members2.op=join
+members2.join=agg;num_tx,sum_Amount|agg;mean_Amount
+members2.keys=CustomerID
+## TODO regex field search
 
 
+export.in=${datamart}/Members
+export.records=rownum()<100
+export.out=mm
